--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "tarefa-background-noderedis",
   "version": "1.0.0",
   "type": "module",
-
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bull": "^3.18.0",
+    "bull-board": "^0.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
